Changed the page when you login so it looks like the first page. Changed the header so if coockie is set, the button says logout

--- a/config/app.json
+++ b/config/app.json
@@ -1,6 +1,6 @@
 {
     "db": {
-        "dsn": "mysql:host=127.0.0.1;dbname=dynamisk_webbplats",
+        "dsn": "mysql:host=127.0.0.1;dbname=blogg",
         "user": "root",
         "password": "root"
     }
