Add deploy and general cleanup
- Attempt to fix asset path issue prod vs locally
- Remove non-relevant vagrant-related configuration
- Add deploy configuration

--- a/config/app.json
+++ b/config/app.json
@@ -1,7 +1,7 @@
 {
     "db": {
-        "dsn": "mysql:host=blogg-226740.mysql.binero.se;dbname=226740-blogg",
-        "user": "226740_gy80048",
-        "password": "password1234"
+        "dsn": "mysql:host=127.0.0.1;dbname=blogg",
+        "user": "root",
+        "password": "root"
     }
 }
