Update deployer url

--- a/config/app.json
+++ b/config/app.json
@@ -1,6 +1,6 @@
 {
     "db": {
-        "dsn": "mysql:host=127.0.0.1;dbname=226740-blogg",
+        "dsn": "mysql:host=127.0.0.1;dbname=226740-blogg;charset=utf8",
         "user": "root",
         "password": "root"
     }
